4.10.6
------
release: XXX

- Build for both scala 2.8.1 and scala 2.9.1.
- Add support for named JSONP callbacks. [gphat]
- Add support for exporting to graphite. [ewhauser]


4.10.3
------
release: 24 January 2012

- Allow counters to be generated out of AtomicLong objects.
- Add the ability to remove a metric.
- Handle exceptions thrown by gauges.
- Use a configurable separator when flattening metric names.


4.10.2
------
release: 20 October 2011

- Compiled against util 1.12.9


4.10.0
------
release: 20 October 2011

- Compiled against util 1.12.0


4.9.4
-----
release: 17 October 2011

- Compile configs loaded by RuntimeEnvironment to a directory
- Enable or disable Finagle tracing from the admin http interface.
- Fix PeriodicBackgroundProcess to delay up to a second, preventing it
  from running at the 59th second of a minute by accident.
- Add more histogram buckets, to track metrics > 1M.


4.9.3
-----
release: 22 September 2011

- Add 'removeCounter'. [gphat]


4.9.2
-----
release: 13 September 2011

- Fix logic to find the jar when it's in the current folder.


4.9.1
-----
release: 7 September 2011

- Fix a few small bugs in the "/graph/" system of the admin server.


4.9.0
-----
release: 29 August 2011

- Add 'statsFilters' and "?filtered=1" to the stats command on the admin
  port.


4.8.3
-----
release: 12 August 2011

- Allow a BackgroundProcess to ask not to be interrupted.
- Allow a BackgroundProcess to be stopped without joining its underlying
  thread.


4.8.2
-----
Changes:

- supports configuration which StatsCollection to report for a given AdminHttpService


4.8.0
-----
release: 8 August 2011

- Histogram improvements (used for percentiles)
    Use 3x more buckets
    getPercentile/minimum/maximum now returns midpoint of bucket, not
     upper boundary
    With the above two changes, getPercentile/minimum/maximum return
      an estimated value within 5% of the actual value.  Before, the