@@ -19,5 +19,5 @@ class Plugins(info: ProjectInfo) extends PluginDefinition(info) {
   }
   override def ivyRepositories = Seq(Resolver.defaultLocal(None)) ++ repositories
 
-  val standardProject = "com.twitter" % "standard-project" % "1.0.0"
+  val standardProject = "com.twitter" % "standard-project" % "1.0.3"
 }
